通过ip防止恶意刷留言回复

--- a/info/templates/gbook_new.html
+++ b/info/templates/gbook_new.html
@@ -250,17 +250,13 @@
                     "X-CSRFToken": getCookie("csrftoken")
                 },
                 data: JSON.stringify(params),
-            {#
                 success: function (resp) {
-                    if (resp.errno == '0'){
+                    if (resp.errno != '0'){
                         // location.reload()
-
-
-                    }else{
                         alert(resp.errmsg);
                     }
                 }
-            #}
+
             })
         })
 	})
