修改留言前端

--- a/info/templates/gbook_new.html
+++ b/info/templates/gbook_new.html
@@ -252,8 +252,8 @@
                 data: JSON.stringify(params),
                 success: function (resp) {
                     if (resp.errno != '0'){
-                        // location.reload()
                         alert(resp.errmsg);
+                        location.reload();
                     }
                 }
 
