--- a/info/templates/about.html
+++ b/info/templates/about.html
@@ -11,6 +11,7 @@
 <link href="../static/css/base.css" rel="stylesheet">
 <link href="../static/css/index.css" rel="stylesheet">
 <link href="../static/css/m.css" rel="stylesheet">
+<link href="../static/css/search-form.css" rel="stylesheet">
 <script src="../static/js/jquery.min.js" type="text/javascript"></script>
 <script src="../static/js/jquery.easyfader.min.js"></script>
 <script src="../static/js/scrollReveal.js"></script>
@@ -54,6 +55,39 @@
 <!--[if lt IE 9]>
 <script src="js/modernizr.js"></script>
 <![endif]-->
+<script type="text/javascript">
+    function searchToggle(obj, evt){
+        var container = $(obj).closest('.search-wrapper');
+
+        if(!container.hasClass('active')){
+              container.addClass('active');
+              evt.preventDefault();
+        }
+        else if(container.hasClass('active') && $(obj).closest('.input-holder').length == 0){
+              container.removeClass('active');
+              // clear input
+              container.find('.search-input').val('');
+              // clear and hide result container when we press close
+              container.find('.result-container').fadeOut(100, function(){$(this).empty();});
+        }
+    }
+
+    function submitFn(obj, evt){
+        value = $(obj).find('.search-input').val().trim();
+
+        _html = "Yup yup! Your search text sounds like this: ";
+        if(!value.length){
+            _html = "请输入你要搜索的关键字！";
+        }
+        else {
+            location.href = '/search?keywords=' + value
+        }
+        $(obj).find('.result-container').html('<span>' + _html + '</span>');
+        $(obj).find('.result-container').fadeIn(100);
+
+        evt.preventDefault();
+    }
+</script>
 </head>
 <body>
 <header>
@@ -68,6 +102,20 @@
       {% endfor %}
       <li><a href="time.html">Time</a> </li>
       <li><a href="gbook.html">Guest Book</a> </li>
+      <section class="container">
+		<form onsubmit="submitFn(this, event);">
+            <div class="search-wrapper">
+                <div class="input-holder">
+                    <input type="text" class="search-input" placeholder="Type to search" />
+                    <button class="search-icon" onclick="searchToggle(this, event);"><span></span></button>
+                </div>
+                <span class="close" onclick="searchToggle(this, event);"></span>
+                <div class="result-container">
+
+                </div>
+            </div>
+        </form>
+	</section>
     </nav>
   </div>
   <!--menu end-->
