--- a/info/templates/info.html
+++ b/info/templates/info.html
@@ -12,6 +12,7 @@
 <link href="../static/css/index.css" rel="stylesheet">
 <link href="../static/css/main.css" rel="stylesheet">
 <link href="../static/css/m.css" rel="stylesheet">
+<link href="../static/css/search-form.css" rel="stylesheet">
 <!--开头这里的样式为默认的风格，可以根据自己的喜好更换风格--><!--我的高亮效果是zenburn-->
 <link rel="stylesheet" href="../static/styles/androidstudio.css">
 <script src="../static/js/highlight.pack.js"></script>
@@ -59,6 +60,39 @@
 <!--[if lt IE 9]>
 <script src="js/modernizr.js"></script>
 <![endif]-->
+<script type="text/javascript">
+    function searchToggle(obj, evt){
+        var container = $(obj).closest('.search-wrapper');
+
+        if(!container.hasClass('active')){
+              container.addClass('active');
+              evt.preventDefault();
+        }
+        else if(container.hasClass('active') && $(obj).closest('.input-holder').length == 0){
+              container.removeClass('active');
+              // clear input
+              container.find('.search-input').val('');
+              // clear and hide result container when we press close
+              container.find('.result-container').fadeOut(100, function(){$(this).empty();});
+        }
+    }
+
+    function submitFn(obj, evt){
+        value = $(obj).find('.search-input').val().trim();
+
+        _html = "Yup yup! Your search text sounds like this: ";
+        if(!value.length){
+            _html = "请输入你要搜索的关键字！";
+        }
+        else {
+            location.href = '/search?keywords=' + value
+        }
+        $(obj).find('.result-container').html('<span>' + _html + '</span>');
+        $(obj).find('.result-container').fadeIn(100);
+
+        evt.preventDefault();
+    }
+</script>
 </head>
 <body>
 <header>
@@ -73,6 +107,20 @@
       {% endfor %}
       <li><a href="/time.html">Time</a> </li>
       <li><a href="/gbook.html">Guest Book</a> </li>
+      <section class="container">
+		<form onsubmit="submitFn(this, event);">
+            <div class="search-wrapper">
+                <div class="input-holder">
+                    <input type="text" class="search-input" placeholder="Type to search" />
+                    <button class="search-icon" onclick="searchToggle(this, event);"><span></span></button>
+                </div>
+                <span class="close" onclick="searchToggle(this, event);"></span>
+                <div class="result-container">
+
+                </div>
+            </div>
+        </form>
+	</section>
     </nav>
   </div>
   <!--menu end-->
@@ -241,6 +289,7 @@
     <div class="guanzhu" id="follow-us">
       <h2 class="hometitle">关注我们 么么哒！</h2>
       <ul>
+        <li class="qq"><a href="/" target="_blank"><span>qq</span>{{ data.admin_dict.qq }}</a></li>
         <li class="email"><a href="/" target="_blank"><span>邮箱帐号</span>{{ data.admin_dict.email }}</a></li>
         <li class="wxgzh"><a href="/" target="_blank"><span>微信号</span>{{ data.admin_dict.wxid }}</a></li>
         <li class="wx"><img src="{{ data.admin_dict.wxcode }}"></li>
