--- a/info/templates/search.html
+++ b/info/templates/search.html
@@ -14,28 +14,35 @@
 <script src="../static/js/jquery.easyfader.min.js"></script>
 <script src="../static/js/scrollReveal.js"></script>
 <script src="../static/js/common.js"></script>
-<script src="../static/js/index.js"></script>
-<script src="../static/js/tags_about.js"></script>
+<script src="../static/js/tags.js"></script>
 <style type="text/css">
+.cloud {
+    pointer-events: none;
+}
 #tagsList {
 	position: relative;
+{#	width: 450px;#}
 	width: 364px;
+{#	height: 450px;#}
 	height: 364px;
-    margin: 0 auto;
-    top: 60px;
+{#	margin: 150px auto 0;#}
+    left: -40px;
+    pointer-events: none;
 }
+{# pointer-events属性设置穿透，鼠标进入tagsList标签时不会影响a标签的鼠标事件 #}
 #tagsList a {
 	position: absolute;
 	top: 0px;
 	left: 0px;
 	font-family: cursive;
-	color: black;
+	color: #000331;
 	font-weight: bold;
 	text-decoration: none;
 	padding: 3px 6px;
+    pointer-events: auto;
 }
 #tagsList a:hover {
-	color: #FF0000;
+	color: #ffcd46;
 	letter-spacing: 2px;
 }
 </style>
@@ -85,7 +92,7 @@
       <li><a href="/">Index</a> </li>
       <li><a href="about.html">About Me</a> </li>
       {% for categories in data.categories_dicts %}
-        <li data-cid="{{ categories.id }}"><a href="/">{{ categories.name }}</a> </li>
+        <li data-cid="{{ categories.id }}"><a href="#">{{ categories.name }}</a> </li>
       {% endfor %}
       <li><a href="time.html">Time</a> </li>
       <li><a href="gbook.html">Guest Book</a> </li>
@@ -106,27 +113,55 @@
     </nav>
   </div>
   <!--menu end-->
+  <!--mnav begin-->
+  <!--mnav end-->
 </header>
-<div id="tagsList">
-  {% for tag in data.admin_dict.tags %}
-    <a href="#" title="{{ tag }}">{{ tag }}</a>
-  {% endfor %}
-</div>
-<div class="container">
-  <h1 class="t_nav"><span>时光飞逝，机会就在我们眼前，何时找到了灵感，就要把握机遇，我们需要智慧和勇气去把握机会。</span><a href="/" class="n1">网站首页</a><a href="/" class="n2">时间轴</a></h1>
-  <div class="timebox">
-  <ul id="list">
-    {% for news in data.new_li %}
-        <li><span>{{ news.create_date }}</span><a href="/news/{{ news.id }}" title="{{ news.title }}">{{ news.title }}</a></li>
-    {% endfor %}
-  </ul>
-  <div class="pagelist"><a class="allpage"><b>{{ data.total_page }}页</b>&nbsp;&nbsp;<a href="#" onclick="updateNewsData()">下一页</a></div>
-  <ul id="list2">
-  </ul>
+<article>
+  <div class="blank"></div>
+  <!--blogsbox begin-->
+  <div class="blogsbox">
+      {% if not data.new_li %}
+            没有搜索到相关文章
+      {% endif %}
+      {% for new in data.new_li %}
+          <div class="blogs" data-scroll-reveal="enter bottom over 1s" >
+              <h3 class="blogtitle"><a href="./news/{{ new.id }}" target="_blank">{{ new.title }}</a></h3>
+              <span class="blogpic"><a href="/" title=""><img src={{ new.index_image_url }} alt=""></a></span>
+              <p class="blogtext">{{ new.digest }}</p>
+              <div class="bloginfo">
+                <ul>
+                  <li class="author"><a href="/">{{ new.source }}</a></li>
+                  <li class="lmname"><a href="/">{{ new.category.name }}</a></li>
+                  <li class="timer">{{ new.create_time }}</li>
+                  <li class="view"><span>{{ new.cliks }}</span>已阅读</li>
+                  <li class="like">{{ new.like_count }}</li>
+                </ul>
+              </div>
+            </div>
+      {% endfor %}
   </div>
-</div>
+  <!--blogsbox end-->
+  <div class="sidebar">
+
+    <div class="cloud" id="tagsList">
+      <h2 class="hometitle" style="left: 40px;">标签云</h2>
+        {% for tag in data.admin_dict.tags %}
+            <a href="#" title="{{ tag }}">{{ tag }}</a>
+        {% endfor %}
+    </div>
+    <div class="guanzhu" id="follow-us">
+      <h2 class="hometitle">关注我们 么么哒！</h2>
+      <ul>
+        <li class="qq"><a href="/" target="_blank"><span>QQ</span>{{ data.admin_dict.qq }}</a></li>
+        <li class="email"><a href="/" target="_blank"><span>邮箱帐号</span>{{ data.admin_dict.email }}</a></li>
+        <li class="wxgzh"><a href="/" target="_blank"><span>微信号</span>{{ data.admin_dict.wxid }}</a></li>
+        <li class="wx"><img src="{{ data.admin_dict.wxcode }}"></li>
+      </ul>
+    </div>
+  </div>
+</article>
 <footer>
-  <p>Design by <a href="/" target="_blank">{{ data.admin_dict.butoom_title }}</a> <a href="/">{{ data.admin_dict.beian }}</a></p>
+  <p>Design by <a href="/" target="_blank">{{ data.admin_dict.butoom_title }}</a> <a href="http://www.miitbeian.gov.cn/">{{ data.admin_dict.beian }}</a></p>
 </footer>
 <a href="#" class="cd-top">Top</a>
 </body>
